# rsd-tui

./: Cargo.toml  rsd-tui-install.sh
src/: account.rs  io.rs  main.rs  state.rs  types.rs  ui.rs
